--- a/netuno/index.html
+++ b/netuno/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Netuno</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <menu>
-            <!--IMG-->
+            <img src="assets/logo.png" alt="logo netuno">
             <a href="#">O Projeto</a>
             <a href="#">O Problema</a>
             <a href="#">Sua Jornada</a>
             <a href="#">Objetivos</a>
             <a href="#">Processo Seletivo</a>
         </menu>
-        <!--IMG-->
+        <img src="imagens/bannertopo-pq.png" alt="banner">
         <!--FORMULÁRIO-->
-        <!--IMG-->
+        <img src="imagens/dev-pq.png" alt="imagem dev">
         <h1>O Projeto</h1>
         <p>
             Com o "novo normal" causado pela pandemia dos últimos anos, mais 
@@ -32,7 +33,7 @@
     </header>
     <main>
         <article>
-            <!--IMG-->
+            <img src="imagens/Container2-pq.png" alt="banner">
             <h1>O Problema</h1>
             <p>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</p>
             <p>Estima-se que atualmente tenhamos um défict de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo com a Softex, uma organização social voltada ao fomento da área de TI.</p>
@@ -51,36 +52,38 @@
             </div>
         </article>
         <aside>
-            <h1>Sua Jornada</h2>
+            <img src="Elements/Vector2.png" alt="elemento">
+            <h1>Sua Jornada</h1> 
+            <img src="Elements/Vector2.png" alt="elemento">
             <div>
-                <!--icone-->
+                <img src="icones/calendario.png" alt="calendario">
                 <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
             </div>
             <div>
-                <!--icone-->
+                <img src="icones/medalha.png" alt="medalha">
                 <p>Do zero ao Junior Promissor em 4 meses.</p>
             </div>
             <div>
-                <!--icone-->
+                <img src="icones/relogio.png" alt="relogio">
                 <p>640 horas de aplicação prática dos conceitos.</p>
             </div>
             <div>
-                <!--icone-->
+                <img src="icones/home.png" alt="home">
                 <p>Mentoria individual e coletiva em padrão ágil.</p>
             </div>
             <div>
-                <!--icone-->
+                <img src="icones/group.png" alt="group">
                 <p>100% Home Office com plataformas de cursos online.</p>
             </div>
             <div>
-                <!--icone-->
+                <img src="icones/target.png" alt="target">
                 <p>Variedade de áreas dentro da tecnologia.</p>
             </div>
             <div>
                 <p>Quero me cadastrar para o <strong>Processo Seletivo</strong></p>
-                <!--icone-->
+                <img src="icones/enter.png" alt="enter">
             </div>
-            <!--icone-->
+            <img src="Elements/Vector1.png" alt="icone">
         </aside>
         <section>
             <h1>Objetivos</h1>
@@ -99,8 +102,10 @@
         </section>
     </main>
     <footer>
-        <!--IMG-->
-        <!--ICONES-->
+        <img src="assets/logo+slogan.png" alt="logo netuno">
+        <img src="icones/fb.png" alt="facebook icone">
+        <img src="icones/ig.png" alt="instagram icone">
+        <img src="icones/in.png" alt="linkedin icone">
         <p>Netuno@ 2022 - Todos os direitos reservados</p>
         <div>
             <a href="#">Processo Seletivo</a>
