--- a/netuno/index.html
+++ b/netuno/index.html
@@ -15,7 +15,7 @@
             <a href="#">O Problema</a>
             <a href="#">Sua Jornada</a>
             <a href="#">Objetivos</a>
-            <a href="#">Processo Seletivo</a>
+            <a href="#" id="preto">Processo Seletivo</a>
         </menu>
         <img src="imagens/bannertopo-pq.png" alt="banner">
         <!--FORMULÁRIO-->
@@ -28,7 +28,7 @@
             profissionais migrando para trabalhos em outros paises.
         </p>
         <p>
-            O projeto Netuno, idealizado pela Fasters, tem por objetivo reduzir os  estresses causados por recrutamento e turn over na área de tecnologia, bem como gerar oportunidades de carreira para novos profissionais.
+            <strong>O projeto Netuno, idealizado pela Fasters, tem por objetivo reduzir os  estresses causados por recrutamento e turn over na área de tecnologia, bem como gerar oportunidades de carreira para novos profissionais.</strong>
         </p>
     </header>
     <main>
