--- a/netuno/index.html
+++ b/netuno/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Netuno</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
 </head>
 <body>
     <header>
@@ -35,18 +35,21 @@
         <article>
             <img src="imagens/Container2-pq.png" alt="banner">
             <h1>O Problema</h1>
-            <p>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</p>
+            <p><strong>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</strong></p>
+            <div id="border2">
+
+            </div>
             <p>Estima-se que atualmente tenhamos um défict de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo com a Softex, uma organização social voltada ao fomento da área de TI.</p>
-            <p>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</p>
-            <div>
-                <h2>oportunidade</h2>
+            <p><strong>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</strong></p>
+            <div class="caixa">
+                <h2>Oportunidade</h2>
                 <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
             </div>
-            <div>
+            <div class="caixa">
                 <h2>Comunidade</h2>
                 <p>Dentro de um grupo de pessoas mais experientes e acessíveis, a curva de aprendizado ocorre de forma rápida, fluída e eficiente.</p>
             </div>
-            <div>
+            <div class="caixa">
                 <h2>Experiencia Real</h2>
                 <p>Entendemos que somente as experiências reais poderão trazer a bagagem que a teoria não o pode fazer.</p>
             </div>
@@ -55,59 +58,59 @@
             <img src="Elements/Vector2.png" alt="elemento">
             <h1>Sua Jornada</h1> 
             <img src="Elements/Vector2.png" alt="elemento">
-            <div>
-                <img src="icones/calendario.png" alt="calendario">
-                <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
+            <div class="caixablue">
+                    <img src="icones/calendario.png" alt="calendario">
+                    <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
             </div>
-            <div>
-                <img src="icones/medalha.png" alt="medalha">
-                <p>Do zero ao Junior Promissor em 4 meses.</p>
+            <div class="caixablue">
+                    <img src="icones/medalha.png" alt="medalha">
+                    <p>Do zero ao Junior Promissor em 4 meses.</p>
             </div>
-            <div>
+            <div class="caixablue">
                 <img src="icones/relogio.png" alt="relogio">
                 <p>640 horas de aplicação prática dos conceitos.</p>
             </div>
-            <div>
+            <div class="caixablue">
                 <img src="icones/home.png" alt="home">
                 <p>Mentoria individual e coletiva em padrão ágil.</p>
             </div>
-            <div>
+            <div class="caixablue">
                 <img src="icones/group.png" alt="group">
                 <p>100% Home Office com plataformas de cursos online.</p>
             </div>
-            <div>
+            <div class="caixablue">
                 <img src="icones/target.png" alt="target">
                 <p>Variedade de áreas dentro da tecnologia.</p>
             </div>
-            <div>
+            <div id="caixablack">
                 <p>Quero me cadastrar para o <strong>Processo Seletivo</strong></p>
                 <img src="icones/enter.png" alt="enter">
             </div>
-            <img src="Elements/Vector1.png" alt="icone">
+            <img id="vector" src="Elements/Vector1.png" alt="icone">
         </aside>
         <section>
             <h1>Objetivos</h1>
-            <div>
+            <div class="caixa">
                 <h2>Otimizar</h2>
                 <p>Otimizar todo processo de contratação chegando a contribuir com uma economia de 40% no processo de recrutamento.</p>
             </div>
-            <div>
+            <div class="caixa">
                 <h2>Gerar</h2>
                 <p>Gerar novas oportunidades de carreira para pessoas interessadas em ingressar na área ou migrar de outras áreas que esteja descontente.</p>
             </div>
-            <div>
+            <div class="caixa">
                 <h2>Filtrar</h2>
                 <p>Criar oportunidades brilhantes para profissionais que se destacarem junto a parceiros estratégicos de negócios.</p>
             </div>
         </section>
     </main>
     <footer>
-        <img src="assets/logo+slogan.png" alt="logo netuno">
-        <img src="icones/fb.png" alt="facebook icone">
-        <img src="icones/ig.png" alt="instagram icone">
-        <img src="icones/in.png" alt="linkedin icone">
+        <img src="assets/logo+slogan.png" alt="logo netuno"><br>
+        <img class="ico" src="icones/fb.png" alt="facebook icone">
+        <img class="ico" src="icones/ig.png" alt="instagram icone">
+        <img class="ico" src="icones/in.png" alt="linkedin icone">
         <p>Netuno@ 2022 - Todos os direitos reservados</p>
-        <div>
+        <div id="linkwhite">
             <a href="#">Processo Seletivo</a>
         </div>
         <ul>
@@ -117,7 +120,7 @@
             <li><a href="#">Objetivos</a></li>
         </ul>
         <h2>Contato</h2>
-        <a href="#">11 91234.5678</a>
+        <a href="#">11 91234.5678</a><br>
         <a href="#">contato@netuno.com.br</a>
     </footer>
 </body>
