--- a/netuno/index.html
+++ b/netuno/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <header>
-        <menu>
-            <img src="assets/logo.png" alt="logo netuno">
-            <a href="#">O Projeto</a>
-            <a href="#">O Problema</a>
-            <a href="#">Sua Jornada</a>
-            <a href="#">Objetivos</a>
-            <a href="#" id="preto">Processo Seletivo</a>
-        </menu>
-        <img src="imagens/bannertopo-pq.png" alt="banner">
+        <nav>
+            <img id="logo" src="assets/logo.png" alt="logo netuno">
+                <a href="#">O Projeto</a>
+                <a href="#">O Problema</a>
+                <a href="#">Sua Jornada</a>
+                <a href="#">Objetivos</a>
+                <a id="preto" href="#">Processo Seletivo</a>
+        </nav>
+        <div id="gradientborder">
+
+        </div>
+        <img id="banner1" src="imagens/bannertopo-pq.png" alt="banner">
         <!--FORMULÁRIO-->
-        <img src="imagens/dev-pq.png" alt="imagem dev">
+        <img id="banner2" src="imagens/dev-pq.png" alt="imagem dev">
         <h1>O Projeto</h1>
         <p>
             Com o "novo normal" causado pela pandemia dos últimos anos, mais 
@@ -55,38 +58,68 @@
             </div>
         </article>
         <aside>
-            <img src="Elements/Vector2.png" alt="elemento">
-            <h1>Sua Jornada</h1> 
-            <img src="Elements/Vector2.png" alt="elemento">
-            <div class="caixablue">
+            <div>
+                    <h1>Sua Jornada</h1> 
+                    <img id="vector2" src="Elements/Vector2.png" alt="elemento">
+            </div>
+            <div class="container">
+                <div class="containerimg">
                     <img src="icones/calendario.png" alt="calendario">
+                </div>
+                <div class="containerp">
                     <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
+                </div>
             </div>
-            <div class="caixablue">
+            <div class="container">
+                <div class="containerimg">
                     <img src="icones/medalha.png" alt="medalha">
+                </div>
+                <div class="containerp">
                     <p>Do zero ao Junior Promissor em 4 meses.</p>
+                </div>
             </div>
-            <div class="caixablue">
-                <img src="icones/relogio.png" alt="relogio">
-                <p>640 horas de aplicação prática dos conceitos.</p>
+            <div class="container">
+                <div class="containerimg">
+                    <img src="icones/relogio.png" alt="relogio">
+                </div>
+                <div class="containerp">
+                    <p>640 horas de aplicação prática dos conceitos.</p>
+                </div>
             </div>
-            <div class="caixablue">
-                <img src="icones/home.png" alt="home">
-                <p>Mentoria individual e coletiva em padrão ágil.</p>
+            <div class="container">
+                <div class="containerimg">
+                    <img src="icones/home.png" alt="home">
+                </div>
+                <div class="containerp">
+                    <p>Mentoria individual e coletiva em padrão ágil.</p>
+                </div>
             </div>
-            <div class="caixablue">
-                <img src="icones/group.png" alt="group">
-                <p>100% Home Office com plataformas de cursos online.</p>
+            <div class="container">
+                <div class="containerimg">
+                    <img src="icones/group.png" alt="group">
+                </div>
+                <div class="containerp">
+                    <p>100% Home Office com plataformas de cursos online.</p>
+                </div>
             </div>
-            <div class="caixablue">
-                <img src="icones/target.png" alt="target">
-                <p>Variedade de áreas dentro da tecnologia.</p>
+            <div class="container">
+                <div class="containerimg">
+                    <img src="icones/target.png" alt="target">
+                </div>
+                <div class="containerp">
+                    <p>Variedade de áreas dentro da tecnologia.</p>
+                </div>
             </div>
-            <div id="caixablack">
-                <p>Quero me cadastrar para o <strong>Processo Seletivo</strong></p>
-                <img src="icones/enter.png" alt="enter">
+            <div id="containerblack">
+                <div id="containerblackp">
+                    <p>Quero me cadastrar para o <strong>Processo Seletivo</strong> 
+                    </p>
+                </div>
+                <div id="containerblackimg">
+                    <img src="icones/enter.png" alt="enter">
+                </div>
             </div>
-            <img id="vector" src="Elements/Vector1.png" alt="icone">
+            <img src="Elements/Vector1.png" alt="icone">
         </aside>
         <section>
             <h1>Objetivos</h1>
@@ -119,9 +152,12 @@
             <li><a href="#">Sua Jornada</a></li>
             <li><a href="#">Objetivos</a></li>
         </ul>
+        <div id="border3"></div>
         <h2>Contato</h2>
-        <a href="#">11 91234.5678</a><br>
-        <a href="#">contato@netuno.com.br</a>
+        <ul id="contato">
+            <li><a href="#">11 91234.5678</a></li>
+            <li><a href="#">contato@netuno.com.br</a></li>
+        </ul>
     </footer>
 </body>
 </html>
