mobile first finalizado

--- a/netuno/index.html
+++ b/netuno/index.html
@@ -119,7 +119,7 @@
                     <img src="icones/enter.png" alt="enter">
                 </div>
             </div>
-            <img src="Elements/Vector1.png" alt="icone">
+            <img id="imgvector1" src="Elements/Vector1.png" alt="icone">
         </aside>
         <section>
             <h1>Objetivos</h1>
