--- a/netuno/index.html
+++ b/netuno/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Netuno</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <header>
@@ -22,28 +23,40 @@
         </div>
         <img id="banner1" src="imagens/bannertopo-pq.png" alt="banner">
         <!--FORMULÁRIO-->
-        <img id="banner2" src="imagens/dev-pq.png" alt="imagem dev">
-        <h1>O Projeto</h1>
-        <p>
-            Com o "novo normal" causado pela pandemia dos últimos anos, mais 
-            empressas no mundo todo têm aberto oportunidades no modelo Home Office.
-            Alinhando a depreciação da moeda local, temos um alto índice de 
-            profissionais migrando para trabalhos em outros paises.
-        </p>
-        <p>
-            <strong>O projeto Netuno, idealizado pela Fasters, tem por objetivo reduzir os  estresses causados por recrutamento e turn over na área de tecnologia, bem como gerar oportunidades de carreira para novos profissionais.</strong>
-        </p>
+        <div id="container-mediaquery">
+            <div id="banner2img">
+                <img id="banner2" src="imagens/dev-pq.png" alt="imagem dev">
+            </div>
+            <div id="h1ep">    
+                <h1>O Projeto</h1>
+                <p>
+                    Com o "novo normal" causado pela pandemia dos últimos anos, mais
+                    empressas no mundo todo têm aberto oportunidades no modelo Home Office.
+                    Alinhando a depreciação da moeda local, temos um alto índice de
+                    profissionais migrando para trabalhos em outros paises.
+                </p>
+                <p>
+                    <strong>O projeto Netuno, idealizado pela Fasters, tem por objetivo reduzir os  estresses causados por recrutamento e turn over na área de tecnologia, bem como gerar oportunidades de carreira para novos profissionais.</strong>
+                </p>
+            </div>
+        </div>
     </header>
     <main>
         <article>
-            <img src="imagens/Container2-pq.png" alt="banner">
-            <h1>O Problema</h1>
-            <p><strong>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</strong></p>
-            <div id="border2">
+            <div id="container2-mediaquery">
+                <div id="container2-img">
+                    <img id="banner3" src="imagens/Container2-pq.png" alt="banner">
+                </div>
+                <div id="container2-h1ep">
+                    <h1>O Problema</h1>
+                    <p><strong>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</strong></p>
+                    <div id="border2">
 
+                    </div>
+                    <p>Estima-se que atualmente tenhamos um défict de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo com a Softex, uma organização social voltada ao fomento da área de TI.</p>
+                    <p><strong>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</strong></p>
+                </div>
             </div>
-            <p>Estima-se que atualmente tenhamos um défict de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo com a Softex, uma organização social voltada ao fomento da área de TI.</p>
-            <p><strong>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</strong></p>
             <div class="caixa">
                 <h2>Oportunidade</h2>
                 <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
