--- a/netuno/index.html
+++ b/netuno/index.html
@@ -57,17 +57,19 @@
                     <p><strong>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</strong></p>
                 </div>
             </div>
-            <div class="caixa">
-                <h2>Oportunidade</h2>
-                <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
-            </div>
-            <div class="caixa">
-                <h2>Comunidade</h2>
-                <p>Dentro de um grupo de pessoas mais experientes e acessíveis, a curva de aprendizado ocorre de forma rápida, fluída e eficiente.</p>
-            </div>
-            <div class="caixa">
-                <h2>Experiencia Real</h2>
-                <p>Entendemos que somente as experiências reais poderão trazer a bagagem que a teoria não o pode fazer.</p>
+            <div id="container-caixa">
+                <div class="caixa">
+                    <h2>Oportunidade</h2>
+                    <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
+                </div>
+                <div class="caixa">
+                    <h2>Comunidade</h2>
+                    <p>Dentro de um grupo de pessoas mais experientes e acessíveis, a curva de aprendizado ocorre de forma rápida, fluída e eficiente.</p>
+                </div>
+                <div class="caixa">
+                    <h2>Experiencia Real</h2>
+                    <p>Entendemos que somente as experiências reais poderão trazer a bagagem que a teoria não o pode fazer.</p>
+                </div>
             </div>
         </article>
         <aside>
