--- a/netuno/index.html
+++ b/netuno/index.html
@@ -57,7 +57,7 @@
                     <p><strong>Um dos principais fatores dessa falta de profissionais é o êxedo de profissionais para o exterior.</strong></p>
                 </div>
             </div>
-            <div id="container-caixa">
+            <div class="container-caixa1">
                 <div class="caixa">
                     <h2>Oportunidade</h2>
                     <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
@@ -77,52 +77,54 @@
                     <h1>Sua Jornada</h1> 
                     <img id="vector2" src="Elements/Vector2.png" alt="elemento">
             </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/calendario.png" alt="calendario">
+            <div id="base-container1">
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/calendario.png" alt="calendario">
+                    </div>
+                    <div class="containerp">
+                        <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
+                    </div>
                 </div>
-                <div class="containerp">
-                    <p>Programas de 4 meses de duração, sendo 6 horas/dia.</p>
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/medalha.png" alt="medalha">
+                    </div>
+                    <div class="containerp">
+                        <p>Do zero ao Junior Promissor em 4 meses.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/medalha.png" alt="medalha">
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/relogio.png" alt="relogio">
+                    </div>
+                    <div class="containerp">
+                        <p>640 horas de aplicação prática dos conceitos.</p>
+                    </div>
                 </div>
-                <div class="containerp">
-                    <p>Do zero ao Junior Promissor em 4 meses.</p>
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/home.png" alt="home">
+                    </div>
+                    <div class="containerp">
+                        <p>Mentoria individual e coletiva em padrão ágil.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/relogio.png" alt="relogio">
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/group.png" alt="group">
+                    </div>
+                    <div class="containerp">
+                        <p>100% Home Office com plataformas de cursos online.</p>
+                    </div>
                 </div>
-                <div class="containerp">
-                    <p>640 horas de aplicação prática dos conceitos.</p>
-                </div>
-            </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/home.png" alt="home">
-                </div>
-                <div class="containerp">
-                    <p>Mentoria individual e coletiva em padrão ágil.</p>
-                </div>
-            </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/group.png" alt="group">
-                </div>
-                <div class="containerp">
-                    <p>100% Home Office com plataformas de cursos online.</p>
-                </div>
-            </div>
-            <div class="container">
-                <div class="containerimg">
-                    <img src="icones/target.png" alt="target">
-                </div>
-                <div class="containerp">
-                    <p>Variedade de áreas dentro da tecnologia.</p>
+                <div class="container">
+                    <div class="containerimg">
+                        <img src="icones/target.png" alt="target">
+                    </div>
+                    <div class="containerp">
+                        <p>Variedade de áreas dentro da tecnologia.</p>
+                    </div>
                 </div>
             </div>
             <div id="containerblack">
@@ -138,26 +140,29 @@
         </aside>
         <section>
             <h1>Objetivos</h1>
-            <div class="caixa">
-                <h2>Otimizar</h2>
-                <p>Otimizar todo processo de contratação chegando a contribuir com uma economia de 40% no processo de recrutamento.</p>
-            </div>
-            <div class="caixa">
-                <h2>Gerar</h2>
-                <p>Gerar novas oportunidades de carreira para pessoas interessadas em ingressar na área ou migrar de outras áreas que esteja descontente.</p>
-            </div>
-            <div class="caixa">
-                <h2>Filtrar</h2>
-                <p>Criar oportunidades brilhantes para profissionais que se destacarem junto a parceiros estratégicos de negócios.</p>
+            <div class="container-caixa2">
+                <div class="caixa">
+                    <h2>Otimizar</h2>
+                    <p>Otimizar todo processo de contratação chegando a contribuir com uma economia de 40% no processo de recrutamento.</p>
+                </div>
+                <div class="caixa">
+                    <h2>Gerar</h2>
+                    <p>Gerar novas oportunidades de carreira para pessoas interessadas em ingressar na área ou migrar de outras áreas que esteja descontente.</p>
+                </div>
+                <div class="caixa">
+                    <h2>Filtrar</h2>
+                    <p>Criar oportunidades brilhantes para profissionais que se destacarem junto a parceiros estratégicos de negócios.</p>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <img src="assets/logo+slogan.png" alt="logo netuno"><br>
-        <img class="ico" src="icones/fb.png" alt="facebook icone">
-        <img class="ico" src="icones/ig.png" alt="instagram icone">
-        <img class="ico" src="icones/in.png" alt="linkedin icone">
-        <p>Netuno@ 2022 - Todos os direitos reservados</p>
+        <div id="container3">
+                <img src="assets/logo+slogan.png" alt="logo netuno"><br>
+                <img class="ico" src="icones/fb.png" alt="facebook icone">
+                <img class="ico" src="icones/ig.png" alt="instagram icone">
+                <img class="ico" src="icones/in.png" alt="linkedin icone">
+                <p>Netuno@ 2022 - Todos os direitos reservados</p>
         <div id="linkwhite">
             <a href="#">Processo Seletivo</a>
         </div>
@@ -173,6 +178,7 @@
             <li><a href="#">11 91234.5678</a></li>
             <li><a href="#">contato@netuno.com.br</a></li>
         </ul>
+        </div>
     </footer>
 </body>
 </html>
