--- a/netuno/index.html
+++ b/netuno/index.html
@@ -11,12 +11,18 @@
 <body>
     <header>
         <nav>
-            <img id="logo" src="assets/logo.png" alt="logo netuno">
-                <a href="#">O Projeto</a>
-                <a href="#">O Problema</a>
-                <a href="#">Sua Jornada</a>
-                <a href="#">Objetivos</a>
-                <a id="preto" href="#">Processo Seletivo</a>
+            <div id="nav-img">
+                <img id="logo" src="assets/logo.png" alt="logo netuno">
+            </div>
+                <div id="nav-a">
+                    <a href="#">O Projeto</a>
+                    <a href="#">O Problema</a>
+                    <a href="#">Sua Jornada</a>
+                    <a href="#">Objetivos</a>
+                </div>   
+                <div id="nav-preto"> 
+                    <a id="preto" href="#">Processo Seletivo</a>
+                </div>
         </nav>
         <div id="gradientborder">
 
@@ -158,27 +164,38 @@
     </main>
     <footer>
         <div id="container3">
+            <div id="container3-logos">
                 <img src="assets/logo+slogan.png" alt="logo netuno"><br>
                 <img class="ico" src="icones/fb.png" alt="facebook icone">
                 <img class="ico" src="icones/ig.png" alt="instagram icone">
                 <img class="ico" src="icones/in.png" alt="linkedin icone">
                 <p>Netuno@ 2022 - Todos os direitos reservados</p>
-        <div id="linkwhite">
-            <a href="#">Processo Seletivo</a>
-        </div>
-        <ul>
-            <li><a href="#">O Projeto</a></li>
-            <li><a href="#">O problema</a></li>
-            <li><a href="#">Sua Jornada</a></li>
-            <li><a href="#">Objetivos</a></li>
-        </ul>
-        <div id="border3"></div>
-        <h2>Contato</h2>
-        <ul id="contato">
-            <li><a href="#">11 91234.5678</a></li>
-            <li><a href="#">contato@netuno.com.br</a></li>
-        </ul>
-        </div>
+            </div>
+            <div id="linkwhite">
+                <a href="#">Processo Seletivo</a>
+            </div>
+            <div id="container3-links1">
+                <ul>
+                    <li><a href="#">O Projeto</a></li>
+                    <li><a href="#">O problema</a></li>
+                    <li><a href="#">Sua Jornada</a></li>
+                    <li><a href="#">Objetivos</a></li>
+                </ul>
+            </div>
+            <div id="border3">
+
+            </div>
+            <div id="border4">
+
+            </div>
+            <div id="container3-links2">
+                <h2>Contato</h2>
+                <ul id="contato">
+                    <li><a href="#">11 91234.5678</a></li>
+                    <li><a href="#">contato@netuno.com.br</a></li>
+                </ul>
+            </div>
+        </div>    
     </footer>
 </body>
 </html>
