--- a/netuno/index.html
+++ b/netuno/index.html
@@ -27,7 +27,10 @@
         <div id="gradientborder">
 
         </div>
-        <img id="banner1" src="imagens/bannertopo-pq.png" alt="banner">
+        <picture>
+            <source media="(max-width: 768px)" srcset="imagens/bannertopo-pq.png">
+            <img id="banner1" src="imagens/bannertopo.png" alt="banner"> 
+        </picture>
         <!--FORMULÁRIO-->
         <div id="container-mediaquery">
             <div id="banner2img">
