--- a/netuno/index.html
+++ b/netuno/index.html
@@ -31,7 +31,19 @@
             <source media="(max-width: 768px)" srcset="imagens/bannertopo-pq.png">
             <img id="banner1" src="imagens/bannertopo.png" alt="banner"> 
         </picture>
-        <!--FORMULÁRIO-->
+        <form action="" method="get"></form>
+
+
+
+
+
+
+
+
+
+
+
+
         <div id="container-mediaquery">
             <div id="banner2img">
                 <img id="banner2" src="imagens/dev-pq.png" alt="imagem dev">
@@ -83,8 +95,8 @@
         </article>
         <aside>
             <div>
-                    <h1>Sua Jornada</h1> 
-                    <img id="vector2" src="Elements/Vector2.png" alt="elemento">
+                <h1>Sua Jornada</h1> 
+                <img id="vector2" src="Elements/Vector2.png" alt="elemento">
             </div>
             <div id="base-container1">
                 <div class="container">
